--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-anchor-carousel": "^3.1.2",
     "react-native-animated-nav-tab-bar": "^3.0.5",
+    "react-native-calendars": "^1.403.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.3.0",
     "react-native-reanimated": "^1.13.1",
